--- a/apollolake_user_config.json
+++ b/apollolake_user_config.json
@@ -4,6 +4,8 @@
         "vid": "0x46f4",
         "sn": "1234XXX123",
         "mac1": "XXYYXXYYXXYY"
+        "mac2": "XXXXYYYYXXYY"
+        "mac3": "YYXXXXYYXXYY"
     },
     "synoinfo": {},
     "ramdisk_copy": {},
